--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^12.6.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-markdown": "^5.0.3",
     "react-scripts": "4.0.1",
+    "react-syntax-highlighter": "^15.4.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
